--- a/_posts/2020-09-14-curl.md
+++ b/_posts/2020-09-14-curl.md
@@ -1,9 +1,7 @@
 ---
-title: "Welcome to my blog"
+title: "An interesting feature in curl on powershell"
 date: 2020-09-14
 ---
-
-# An interesting feature in curl on powershell
 
 Something I just found out was that curl has a `-usebasicparsing` flag which shows information about an HTTP request. For example,
 
